--- a/shopping-app/src/app/components/footer/footer.component.scss
+++ b/shopping-app/src/app/components/footer/footer.component.scss
@@ -2,7 +2,7 @@ footer {
   margin-top: 0;
 
   .container {
-    background: #fff;
+    background: linear-gradient(to top, palegoldenrod, goldenrod);
     color: var(--gray-color);
     display: grid;
     justify-content: center;
