--- a/shopping-app/src/app/components/cart/section-three/section-three.component.scss
+++ b/shopping-app/src/app/components/cart/section-three/section-three.component.scss
@@ -71,9 +71,11 @@
             }
           }
           .card-details {
-            display: grid;
-            grid-template-columns: 8fr 1fr 1fr;
-            gap: 1rem;
+            form {
+              display: grid;
+              grid-template-columns: 8fr 1fr 1fr;
+              gap: 1rem;
+            }
           }
           input {
             height: 30px;
@@ -131,34 +133,31 @@
       }
     }
     .cart-summary {
-      input {
-        width: 100%;
-        border: none;
-        margin-top: 0.5rem;
-        padding-top: 0.2rem;
-        padding-bottom: 0.7rem;
-        border-bottom: 2px solid lightgray;
-      }
-      .product {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        gap: 0.7rem;
-        color: var(--gray-color);
-        border-bottom: 2px solid lightgray;
-        padding-bottom: 1rem;
+      .items-list {
+        max-height: 350px;
+        overflow-y: scroll;
+        margin-bottom: 1rem;
+        .product {
+          display: grid;
+          grid-template-columns: 1fr 2fr;
+          gap: 0.7rem;
+          color: var(--gray-color);
+          border-bottom: 2px solid lightgray;
+          padding-bottom: 1rem;
 
-        margin-top: 1.5rem;
-        img {
-          width: 100px;
-          height: 70px;
-          border: 1px solid lightgray;
-        }
-        h4 {
-          font-weight: 100;
-          margin-bottom: 0.5rem;
-        }
-        span {
-          font-weight: 100;
+          margin-top: 1.5rem;
+          img {
+            width: 100px;
+            height: 70px;
+            border: 1px solid lightgray;
+          }
+          h4 {
+            font-weight: 100;
+            margin-bottom: 0.5rem;
+          }
+          span {
+            font-weight: 100;
+          }
         }
       }
       .cart-total {
@@ -208,7 +207,9 @@
         .credit-card {
           .cc-name {
             .card-details {
-              grid-template-columns: 1fr 1fr;
+              form {
+                grid-template-columns: 1fr 1fr;
+              }
             }
           }
         }
@@ -225,9 +226,11 @@
         .credit-card {
           .cc-name {
             .card-details {
-              grid-template-columns: 2fr 1fr 1fr;
-              .setWidth {
-                width: 164px;
+              form {
+                grid-template-columns: 2fr 1fr 1fr;
+                .setWidth {
+                  width: 164px;
+                }
               }
             }
           }
@@ -245,9 +248,11 @@
         .credit-card {
           .cc-name {
             .card-details {
-              grid-template-columns: 1fr 1fr;
-              .setWidth {
-                width: 100%;
+              form {
+                grid-template-columns: 1fr 1fr;
+                .setWidth {
+                  width: 100%;
+                }
               }
             }
           }
@@ -267,7 +272,9 @@
           .cc-name {
             padding: 1rem;
             .card-details {
-              grid-template-columns: 1fr;
+              form {
+                grid-template-columns: 1fr;
+              }
             }
           }
         }
