--- a/shopping-app/src/app/components/product-description/product-description.component.scss
+++ b/shopping-app/src/app/components/product-description/product-description.component.scss
@@ -15,7 +15,7 @@
       }
     }
     .product-describe {
-      background: #fff;
+      background: palegoldenrod;
       padding: 2rem;
       color: var(--gray-color);
       .title {
@@ -71,6 +71,11 @@
         padding: 0.4rem 1.5rem;
         position: relative;
         margin-top: 3rem;
+        &:hover {
+          background: goldenrod;
+          transform: scale(1.1) translateY(-3px);
+          transition: all 0.5s ease;
+        }
       }
     }
   }
